--- a/depoimentos.html
+++ b/depoimentos.html
@@ -48,61 +48,14 @@
           
     </header>
 
+    <!-- Cuidado para mexer em cima -->
+
+    
     <main role="main">
 
-      <section class="jumbotron text-center">
-        <div class="container">
-                <div id="carouselExampleCaptions" class="carousel slide " data-ride="carousel" style="width: 100%; " >
-                    <ol class="carousel-indicators">
-                      <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-                      <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-                      <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-                    </ol>
-                    <div class="carousel-inner">
-                      <div class="carousel-item active">
-                        <img src="img/a.jpg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block ">
-                          <h5>Computação avança</h5>
-                          <p class="text-light">A computação virou alvo de críticas</p>
-                        </div>
-                      </div>
-                      <div class="carousel-item">
-                        <img src="img/a.jpg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                          <h5>Novo Java?</h5>
-                          <p class="text-light">Os criadores de Java, anunciam o JavaSrap</p>
-                        </div>
-                      </div>
-                      <div class="carousel-item">
-                        <img src="img/a.jpg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                          <h5>Marte alerta</h5>
-                          <p class="text-light">A falta de mão de obra, faz o planeta vermelho recorrer a Terra. Estão em busca de novos programadores.</p>
-                        </div>
-                      </div>
-                    </div>
-                    <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                      <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                      <span class="sr-only">Next</span>
-                    </a>
-                  </div>
-      </section>
 
-      <div class="album py-5 bg-light">
-        <div class="container" id="sobre-mim">
-            <img src="img/PERFIL.png" class="foto-perfil" alt="Responsive image">
-            <h2 class="jumbotron-heading text-dark">Sobre mim</h2>
-            <p class="lead text-dark ">Olá meu nome é João Afonso e estou no mercado de games a mais de 4 anos, tendo
-                desenvolvido projetos com empresas como Sony, Unreal Engine, Cry Engine entre diversas outras. Sou
-                apaixado por games games e desenvolvimento, e gosto de compartilhar meu conhecimento sempre que possível
-                com meus colegas de trabalho</p>
+  <!-- Colocar aqui o código -->
 
-        </div>
-      </div>
 
     </main>
 
